syntax = "proto3";

import "data.proto";

// Require Go Package
option go_package = ".;models";

// [PLUGIN]
// Initial Connection Message
message ConnectionRequest {
  string olc = 1;
  string username = 2;
  Device device = 3;
  Directories directories = 4;
  Contact contact = 5;
}

// Processes Given File with Information
message ProcessRequest {
  bool isExternal = 1;
  string filePath = 2;
  string thumbnailPath = 3;
  int32 duration = 4;
}

// Define Payload Enum
enum Payload {
  NONE = 0;
  IMAGE = 1;
  VIDEO = 2;
  FILE = 3;
  CONTACT = 4;
  URL = 5;
  TEXT = 6;
}

// Invitation Message sent on RPC
message AuthInvite {
  Payload payload = 1;
  Peer from = 2;
  Preview preview = 3;
  Contact contact = 4;
  string url = 5;
  Type type = 6;

  enum Type {
    Peer = 0;
    Device = 1;
  }
}

// Reply Message sent on RPC
message AuthReply {
  Payload payload = 1;
  Peer from = 2;
  bool decision = 3;
  Contact contact = 4;
}

// Error Message
message ErrorMessage {
  string message = 1;
  string method = 2;
}
